First page done

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -1,18 +1,30 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gîlca, Constantina, FAF 202</title>
-    <!--<link rel="stylesheet" href="reset.css">-->
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div id="main">
-      <div class="contents">
-        <h2>Lorem Ipsum Dolor</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+<html><head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gîlca, Constantina, FAF 202</title>
+  <!--<link rel="stylesheet" href="reset.css">-->
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div id="main">
+    <div class="contents">
+      <p class="text" id="text0">Groceries  On the Go.</p>
+      <p class="text" id="text1">Bluu Grocer Mart promises quality food products that are ethically sourced, fresh, and carefully picked for our customers. 
+      Our products range from meat,vegetables to fruits that you'll definitely enjoy.</p><p class="text" id="text2">Quality Products, Made Everyday.</p>
+      <button id="button0" type="button" class="button">SHOP NOW</button>
+      <button type="button" class="button" id="button1">LEARN MORE</button>
+      <img src="images/down-arrow.png" style="position:absolute; left:33vw;top: 570px;">
+      <div id="menu">
+        <img src="images/logo2.png" style="position: absolute;left: 2vw;top: 14px;">
+        <p id="home" class="text">Home</p>
+        <p class="text" id="about">About</p>
+        <p class="text" id="shop">Shop</p>
+        <p class="text" id="contact">Contact Us</p>
+        <img src="images/search.png" style="position: absolute;left: 73vw;top: 31px;">
+        <img src="images/cart.png" style="position: absolute;left: 76vw;top: 31px;">
       </div>
     </div>
-  </body>
+  </div>
+
+</body>
 </html>
