Second page Done

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -10,7 +10,8 @@
     <div class="contents">
       <p class="text" id="text0">Groceries  On the Go.</p>
       <p class="text" id="text1">Bluu Grocer Mart promises quality food products that are ethically sourced, fresh, and carefully picked for our customers. 
-      Our products range from meat,vegetables to fruits that you'll definitely enjoy.</p><p class="text" id="text2">Quality Products, Made Everyday.</p>
+      Our products range from meat,vegetables to fruits that you'll definitely enjoy.</p>
+      <p class="text" id="text2">Quality Products, Made Everyday.</p>
       <button id="button0" type="button" class="button">SHOP NOW</button>
       <button type="button" class="button" id="button1">LEARN MORE</button>
       <img src="images/down-arrow.png" style="position:absolute; left:33vw;top: 570px;">
@@ -24,6 +25,13 @@
         <img src="images/cart.png" style="position: absolute;left: 76vw;top: 31px;">
       </div>
     </div>
+  </div>
+  <div id="second">
+    <p id="text3" class="text">OUR PROMISE</p>
+    <p class="text" id="text4">Locally Sourced Products.</p>
+    <p class="text" id="text5">Bluu Grocer Mart promises quality food products that are ethically sourced, fresh, and carefully picked for our customers. 
+        Our products range from meat,vegetables to fruits that you'll definitely enjoy.</p>
+    <button type="button" class="button" id="button3">LEARN MORE</button>
   </div>
 
 </body>
