Third page done

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -34,5 +34,30 @@
     <button type="button" class="button" id="button3">LEARN MORE</button>
   </div>
 
+  <div id="third">
+    <p id="text6" class="text">Made simple.</p>
+    <p class="text" id="text7">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor inci- 
+      didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud ex- 
+      ercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <img src="images/box.png" class="box" id="box1">
+    <img src="images/fruit1.png" class="fruit" id="fruit1">
+    <img src="images/box.png" class="box" id="box2">
+    <img src="images/fruit2.png" class="fruit" id="fruit2">
+    <img src="images/box.png" class="box" id="box3">
+    <img src="images/fruit3.png" class="fruit" id="fruit3">
+    <p class="product" style="left: 230px;">Product Name</p>
+    <p class="product" style="left: 595px;">Product Name</p>
+    <p class="product" style="left: 960px;">Product Name</p>
+    <p class="price" style="left: 230px;">$000.00</p>
+    <p class="price" style="left: 595px;">$000.00</p>
+    <p class="price" style="left: 960px;">$000.00</p>
+    <button type="button" class="button" id="button4">ADD TO CART</button>
+    <button type="button" class="button" id="button5">ADD TO CART</button>
+    <button type="button" class="button" id="button6">ADD TO CART</button>
+    <img src="images/arrow1.png" class="arrow" style="left: 700px;">
+    <img src="images/arrow2.png" class="arrow" style="left: 800px;">
+  </div>
+
+
 </body>
 </html>
