--- a/lab1/index.html
+++ b/lab1/index.html
@@ -14,15 +14,15 @@
       <p class="text" id="text2">Quality Products, Made Everyday.</p>
       <button id="button0" type="button" class="button">SHOP NOW</button>
       <button type="button" class="button" id="button1">LEARN MORE</button>
-      <img src="images/down-arrow.png" style="position:absolute; left:33vw;top: 570px;">
+      <img src="images/down-arrow.png" style="position:absolute; left:510px;top: 670px;">
       <div id="menu">
-        <img src="images/logo2.png" style="position: absolute;left: 2vw;top: 14px;">
+        <img src="images/logo2.png" style="position: absolute;left: 30px;top: 14px;">
         <p id="home" class="text">Home</p>
         <p class="text" id="about">About</p>
         <p class="text" id="shop">Shop</p>
         <p class="text" id="contact">Contact Us</p>
-        <img src="images/search.png" style="position: absolute;left: 73vw;top: 31px;">
-        <img src="images/cart.png" style="position: absolute;left: 76vw;top: 31px;">
+        <img src="images/search.png" style="position: absolute;left: 1130px;top: 31px;">
+        <img src="images/cart.png" style="position: absolute;left: 1170px;top: 31px;">
       </div>
     </div>
   </div>
@@ -57,7 +57,21 @@
     <img src="images/arrow1.png" class="arrow" style="left: 700px;">
     <img src="images/arrow2.png" class="arrow" style="left: 800px;">
   </div>
-
+  <div id="fourth">
+    <p class="text" id="text8">FAQs</p>
+    <p id="text9" style="top: 250px;">Do you accept credit card payments?</p>
+    <img src="images/plus.png" class="plus" style="top: 254px;">
+    <img src="images/line.png" class="line" style="top: 290px;">
+    <p id="text9" style="top: 320px;">What's your refund policy?</p>
+    <img src="images/plus.png" class="plus" style="top: 324px;">
+    <img src="images/line.png" class="line" style="top: 360px;">
+    <p id="text9" style="top: 390px;">How do deliveries work?</p>
+    <img src="images/plus.png" class="plus" style="top: 394px;">
+    <img src="images/line.png" class="line" style="top: 430px;">
+    <p id="text9" style="top: 460px;">Do you offer contactless deliveries?</p>
+    <img src="images/plus.png" class="plus" style="top: 464px;">
+    <img src="images/line.png" class="line" style="top: 500px;">
+  </div>
 
 </body>
 </html>
